<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center" >

    <TableRow
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/tView1"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:gravity="start"
            android:text="@string/game_speed"
            android:textSize="20dp"
            android:textStyle="bold" />

        <RadioGroup android:id="@+id/group1" >

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:tag="3000"
                android:text="@string/speed1" />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="2000"
                android:text="@string/speed2" />

            <RadioButton
                android:id="@+id/radio3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="700"
                android:text="@string/speed3" />
        </RadioGroup>
    </TableRow>

    <TableRow
        android:layout_marginBottom="5dp"
        android:background="#5080cbc4"
        android:layout_weight="1"
        android:gravity="center" >

        <TextView
            android:id="@+id/tView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:gravity="start"
            android:text="@string/game_row"
            android:textSize="20dp"
            android:textStyle="bold" />

        <RadioGroup android:id="@+id/group2" >

            <RadioButton
                android:id="@+id/row1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/row1" />

            <RadioButton
                android:id="@+id/row2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/row2" />

            <RadioButton
                android:id="@+id/row3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/row3" />
        </RadioGroup>
    </TableRow>

    <TableRow
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:gravity="center" >

        <TextView
            android:id="@+id/tView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:gravity="start"
            android:text="@string/game_col"
            android:textSize="20dp"
            android:textStyle="bold" />

        <RadioGroup android:id="@+id/group3" >

            <RadioButton
                android:id="@+id/col1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/col1" />

            <RadioButton
                android:id="@+id/col2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/col2" />

            <RadioButton
                android:id="@+id/col3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/col3" />
        </RadioGroup>
    </TableRow>

    <TableRow
        android:layout_weight="1"
        android:gravity="center"
        android:background="#5080cbc4"


        >

        <TextView
            android:id="@+id/tView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:gravity="start"
            android:text="@string/game_block"
            android:textSize="20dp"
            android:textStyle="bold" />

        <RadioGroup android:id="@+id/group4" >

            <RadioButton
                android:id="@+id/block1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="12"
                android:text="@string/block1" />

            <RadioButton
                android:id="@+id/block2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:tag="15"
                android:text="@string/block2" />

            <RadioButton
                android:id="@+id/block3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="18"
                android:text="@string/block3" />
        </RadioGroup>
    </TableRow>

    <TableRow
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:gravity="center" >

        <Button
            android:id="@+id/complete"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </TableRow>

</TableLayout>